
[NilClass]

  [New methods]

    * NilClass#=~ is added for compatibility.  [Feature #15231]

[NoMethodError]

  [New options]

    * NoMethodError.new accepts +:receiver+ option to set receiver in Ruby
      code.  [Feature #14313]

[Numeric]

  [Incompatible changes]

    * Numeric#step now returns an instance of Enumerator::ArithmeticSequence
      class rather than one of Enumerator class.

[Proc]

  [New methods]

    * added Proc#<< and Proc#>> for Proc composition.  [Feature #6284]

  [Incompatible changes]

    * Proc#call doesn't change <code>$SAFE</code> any more.  [Feature #14250]

[Random]

  [New methods]

    * added Random.bytes.  [Feature #4938]

[Range]

  [New methods]

    * Added Range#% instance method.  [Feature #14697]

  [Incompatible changes]

    * Range#=== now uses +#cover?+ instead of +#include?+ method. [Feature #14575]
    * Range#cover? now accepts Range object. [Feature #14473]
    * Range#step now returns an instance of Enumerator::ArithmeticSequence
      class rather than one of Enumerator class.

[Regexp/String]

    * Update Unicode version from 10.0.0 to 11.0.0. [Feature #14802]
      This includes a rewrite of the grapheme cluster (/\X/) algorithm
      and special-casing for Georgian MTAVRULI on String#downcase.

    * Update Emoji version from 5.0 to 11.0.0 [Feature #14802]

[RubyVM::AbstractSyntaxTree]

  [New methods]

    * RubyVM::AbstractSyntaxTree.parse parses a given string and returns AST
      nodes. [experimental]

    * RubyVM::AbstractSyntaxTree.parse_file parses a given file and returns AST
      nodes.  [experimental]

    * RubyVM::AbstractSyntaxTree.of returns AST nodes of the given proc or method.
      [experimental]

[RubyVM]

  [New methods]

    * RubyVM.resolve_feature_path identifies the file that will be loaded by
      "require(feature)". [experimental] [Feature #15230]

[String]

  * String#crypt is now deprecated. [Feature #14915]

  [New features]
